<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.aksw</groupId>
  <artifactId>iguana.corecontroller</artifactId>
  <version>2.1.2</version>
  <name>Iguanas Core Controller</name>
  <description>The Controller of Iguanas Core Module. Handeling the messaging and is coordinating the ResultProcessor as well as the dataGenerator. Will be communicating with the Web Controller Module.</description>
<licenses>
		<license>
			<name>LGPLv3 or later</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Felix Conrads</name>
			<email>conrads@informatik.uni-leipzig.de</email>
			<roles>
				<role>Main Developer</role>
			</roles>
			<organization>AKSW Research Group</organization>
			<organizationUrl>http://aksw.org</organizationUrl>
		</developer>
	</developers>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>
	<organization>
		<name>AKSW Research Group</name>
		<url>http://aksw.org</url>
	</organization>
	<issueManagement>
		<system>GitHub Issue Management</system>
		<url>https://github.com/AKSW/iguana/issues</url>
	</issueManagement>
	<url>http://aksw.org/Projects/IGUANA.html</url>

	<dependencies>
		<dependency>
			<groupId>com.rabbitmq</groupId>
			<artifactId>amqp-client</artifactId>
			<version>4.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.aksw</groupId>
			<artifactId>iguana.taskprocessor</artifactId>
			<version>2.1.2</version>
			<exclusions>
				<exclusion>
					<artifactId>org.aksw</artifactId>
					<groupId>iguana.commons</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.aksw</groupId>
			<artifactId>iguana.datagenerator</artifactId>
			<version>2.0.0</version>
			<exclusions>
				<exclusion>
					<artifactId>org.aksw</artifactId>
					<groupId>iguana.commons</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.aksw</groupId>
			<artifactId>iguana.commons</artifactId>
			<version>2.1.0</version>
		</dependency>
                <dependency>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-simple</artifactId>
                        <version>1.7.5</version>
                </dependency>

	</dependencies>
<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<!-- filter all the META-INF files of other artifacts -->
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<manifestEntries>
								<X-Compile-Source-JDK>${maven.compile.source}</X-Compile-Source-JDK>
								<X-Compile-Target-JDK>${maven.compile.target}</X-Compile-Target-JDK>
							</manifestEntries>
						</transformer>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
		</plugins>
</build>
</project>
